# online_shop

./: .gitignore  README.md  catalog_category.json  catalog_products.json  category.json  group.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html  confirm_delete.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_products_manufactured_at.py  0002_products_view_counter_alter_products_category_and_more.py  0003_alter_products_view_counter.py  0004_productversion_alter_products_category.py  0005_delete_productversion.py  0006_productversion.py  0007_rename_productversion_productversions_and_more.py
catalog/templates/: base.html  contact.html  product_confirm_delete.html  product_create.html  product_detail.html  products_list.html
catalog/templates/includes/: category.html  menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html
